@@ -4,6 +4,7 @@
   * Improved algorithm for "calibrate"
   * Network support for dracut
   * Filter out DomU pages, when dumping a Xen virtualization host
+  * Do not try to copy separate debuginfo files
 
 0.8.9
 -----
